update file header comments

--- a/src/assets/styles/component/common.scss
+++ b/src/assets/styles/component/common.scss
@@ -1,4 +1,13 @@
 /**
+ * Common Component
+ *
+ * @package     MHW Calculator
+ * @author      Scar Wu
+ * @copyright   Copyright (c) Scar Wu (http://scar.tw)
+ * @link        https://github.com/scarwu/MHWCalculator
+ */
+
+ /**
  * Font Face
  */
 // Noto Sans TC (Chinese_traditional)
