--- a/src/assets/styles/component/desktop.scss
+++ b/src/assets/styles/component/desktop.scss
@@ -1,5 +1,10 @@
 /**
- * Desktop Style
+ * Desktop Component
+ *
+ * @package     MHW Calculator
+ * @author      Scar Wu
+ * @copyright   Copyright (c) Scar Wu (http://scar.tw)
+ * @link        https://github.com/scarwu/MHWCalculator
  */
 
 @include media-breakpoint-up(sm) {
