--- a/src/assets/styles/mhwc.scss
+++ b/src/assets/styles/mhwc.scss
@@ -1,3 +1,12 @@
+/**
+ * Website Style
+ *
+ * @package     MHW Calculator
+ * @author      Scar Wu
+ * @copyright   Copyright (c) Scar Wu (http://scar.tw)
+ * @link        https://github.com/scarwu/MHWCalculator
+ */
+
 @import "../../../node_modules/bootstrap/scss/bootstrap";
 @import "../../../node_modules/font-awesome/scss/font-awesome";
 
