--- a/src/assets/styles/module/main.scss
+++ b/src/assets/styles/module/main.scss
@@ -1,3 +1,8 @@
 /**
- * Module: Main
+ * Main Module
+ *
+ * @package     MHW Calculator
+ * @author      Scar Wu
+ * @copyright   Copyright (c) Scar Wu (http://scar.tw)
+ * @link        https://github.com/scarwu/MHWCalculator
  */
