--- a/src/assets/styles/component/mobile.scss
+++ b/src/assets/styles/component/mobile.scss
@@ -1,5 +1,10 @@
 /**
- * Mobile Style
+ * Mobile Component
+ *
+ * @package     MHW Calculator
+ * @author      Scar Wu
+ * @copyright   Copyright (c) Scar Wu (http://scar.tw)
+ * @link        https://github.com/scarwu/MHWCalculator
  */
 
 @include media-breakpoint-down(xs) {
