1. tempoary disable bootstrap 2. update style 3. update main page

--- a/src/assets/styles/mhwc.scss
+++ b/src/assets/styles/mhwc.scss
@@ -7,7 +7,7 @@
  * @link        https://github.com/scarwu/MHWCalculator
  */
 
-@import "../../../node_modules/bootstrap/scss/bootstrap";
+// @import "../../../node_modules/bootstrap/scss/bootstrap";
 @import "../../../node_modules/font-awesome/scss/font-awesome";
 
 /**
