--- a/src/assets/styles/component/common.scss
+++ b/src/assets/styles/component/common.scss
@@ -10,6 +10,34 @@
  /**
  * Font Face
  */
+@font-face {
+  font-family: 'PT Serif';
+  font-style: normal;
+  font-weight: 400;
+  src: local('PT Serif'), local('PTSerif-Regular'), url(http://themes.googleusercontent.com/static/fonts/ptserif/v4/sDRi4fY9bOiJUbgq53yZCfesZW2xOQ-xsNqO47m55DA.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'PT Serif';
+  font-style: normal;
+  font-weight: 700;
+  src: local('PT Serif Bold'), local('PTSerif-Bold'), url(http://themes.googleusercontent.com/static/fonts/ptserif/v4/QABk9IxT-LFTJ_dQzv7xpIbN6UDyHWBl620a-IRfuBk.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'PT Serif';
+  font-style: italic;
+  font-weight: 400;
+  src: local('PT Serif Italic'), local('PTSerif-Italic'), url(http://themes.googleusercontent.com/static/fonts/ptserif/v4/03aPdn7fFF3H6ngCgAlQzBsxEYwM7FgeyaSgU71cLG0.woff) format('woff');
+}
+
+@font-face {
+  font-family: 'PT Serif';
+  font-style: italic;
+  font-weight: 700;
+  src: local('PT Serif Bold Italic'), local('PTSerif-BoldItalic'), url(http://themes.googleusercontent.com/static/fonts/ptserif/v4/Foydq9xJp--nfYIx2TBz9QFhaRv2pGgT5Kf0An0s4MM.woff) format('woff');
+}
+
 // Noto Sans TC (Chinese_traditional)
 @font-face {
     font-family: 'Noto Sans TC';
@@ -69,11 +97,10 @@
  * Mixins
  */
 @mixin font-size($remSize) {
-    // // $remSize: 1.4
-    // $pxSize: ($remSize * 10);
+    $pxSize: $remSize * 10;
 
-    // font-size: ~"${pxSize}px";
-    // font-size: ~"${remSize}rem";
+    font-size: #{$pxSize}px;
+    font-size: #{$remSize}rem;
 }
 
 @mixin border-radius($radius) {
@@ -128,6 +155,7 @@ body {
     margin: 0;
     padding: 0;
     font-family:
+        "PT Serif",
         "Noto Sans TC",
         Arial,
         sans-serif;
