--- a/src/assets/styles/mhwc.scss
+++ b/src/assets/styles/mhwc.scss
@@ -7,7 +7,12 @@
  * @link        https://github.com/scarwu/MHWCalculator
  */
 
-// @import "../../../node_modules/bootstrap/scss/bootstrap";
+/**
+ * Reset Bootstrap
+ */
+$grid-gutter-width: 0;
+
+@import "../../../node_modules/bootstrap/scss/bootstrap";
 @import "../../../node_modules/font-awesome/scss/font-awesome";
 
 /**
