--- a/src/assets/styles/module/main.scss
+++ b/src/assets/styles/module/main.scss
@@ -42,7 +42,7 @@ $function_bar-height: 40px;
         @include font-size(1.8);
     }
 
-    .mhwc-skills,
+    .mhwc-unselected_skills,
     .mhwc-selected_skills,
     .mhwc-canditate_equips,
     .mhwc-equips,
@@ -51,7 +51,7 @@ $function_bar-height: 40px;
         height: calc(100vh - (#{$header-height} + #{$section_name-height}));
     }
 
-    .mhwc-skills,
+    .mhwc-unselected_skills,
     .mhwc-selected_skills {
         .mhwc-function_bar {
             padding: 0 10px;
@@ -60,6 +60,7 @@ $function_bar-height: 40px;
             input {
                 width: 100%;
                 height: $function_bar-height - 10px;
+                padding: 0 5px;
             }
         }
 
@@ -94,6 +95,8 @@ $function_bar-height: 40px;
             -moz-user-select: none; /* Firefox */
             -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none;
+
+            @include border-radius(5px);
         }
 
         .mhwc-skill_name {
@@ -108,7 +111,7 @@ $function_bar-height: 40px;
     .mhwc-skills {
         .mhwc-skill_item {
             div:nth-child(1) {
-
+                padding: 0 5px;
             }
 
             div:nth-child(2) {
@@ -125,7 +128,7 @@ $function_bar-height: 40px;
             }
 
             div:nth-child(2) {
-
+                padding: 0 5px;
             }
 
             div:nth-child(3) {
@@ -170,14 +173,19 @@ $function_bar-height: 40px;
             padding: 5px;
             border: 1px solid #333;
 
+            @include border-radius(5px);
+
             .mhwc-name {
 
             }
         }
 
         .mhwc-slots {
+            margin-top: 5px;
             padding: 5px;
             border: 1px solid #333;
+
+            @include border-radius(5px);
 
             .mhwc-name {
 
@@ -185,8 +193,11 @@ $function_bar-height: 40px;
         }
 
         .mhwc-enhances {
+            margin-top: 5px;
             padding: 5px;
             border: 1px solid #333;
+
+            @include border-radius(5px);
 
             .mhwc-name {
 
@@ -200,58 +211,75 @@ $function_bar-height: 40px;
             padding: 5px;
             border: 1px solid #333;
 
-            .mhwc-name {
+            @include border-radius(5px);
 
+            .mhwc-name {
+                line-height: 33px;
             }
 
             .mhwc-value {
+                padding: 5px;
+                border: 1px solid #333;
 
+                @include border-radius(5px);
             }
         }
 
         .mhwc-sharpness {
-            position: relative;
-            border: 1px solid black;
-            width: 100%;
-            height: 14px;
-            line-height: 14px;
-            background-color: black;
+            .mhwc-steps {
+                position: relative;
+                border: 1px solid black;
+                width: 100%;
+                height: 21px;
+                background-color: black;
 
-            .mhwc-step {
-                display: inline-block;
-                height: 12px;
+                .mhwc-step {
+                    display: inline-block;
+                    height: 19px;
 
-                &:nth-child(1) {
-                    background-color: red;
+                    &:nth-child(1) {
+                        background-color: red;
+                    }
+
+                    &:nth-child(2) {
+                        background-color: orange;
+                    }
+
+                    &:nth-child(3) {
+                        background-color: yellow;
+                    }
+
+                    &:nth-child(4) {
+                        background-color: green;
+                    }
+
+                    &:nth-child(5) {
+                        background-color: blue;
+                    }
+
+                    &:nth-child(6) {
+                        background-color: white;
+                    }
                 }
 
-                &:nth-child(2) {
-                    background-color: orange;
-                }
-
-                &:nth-child(3) {
-                    background-color: yellow;
-                }
-
-                &:nth-child(4) {
-                    background-color: green;
-                }
-
-                &:nth-child(5) {
-                    background-color: blue;
-                }
-
-                &:nth-child(6) {
-                    background-color: white;
+                .mhwc-mask {
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    height: 18px;
+                    background-color: black;
                 }
             }
+        }
 
-            .mhwc-mask {
-                position: absolute;
-                top: 0;
-                right: 0;
-                height: 18px;
-                background-color: black;
+        .mhwc-resistance,
+        .mhwc-extra_info {
+            .row .mhwc-value {
+                margin-bottom: 5px;
+            }
+
+            .row:nth-last-child(1) .mhwc-value {
+                margin-bottom: 0;
             }
         }
     }
