1. update constant 2. refactor 3. update ui styles

--- a/src/assets/styles/component/common.scss
+++ b/src/assets/styles/component/common.scss
@@ -146,6 +146,13 @@
     background: linear-gradient(to right, $color1, $color2, $color3);
 }
 
+@mixin nowrap {
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 /**
  * Global Reset
  */
@@ -171,6 +178,20 @@ body {
 
 html {
     font-size: 62.5%;
+    min-width: 1280px;
+    overflow-x: auto;
+
+    &::-webkit-scrollbar {
+        width: 5px;
+        height: 5px;
+        background: white;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: rgba(0, 0, 0, 0.1);
+        -webkit-border-radius: 10px;
+        border-radius: 10px;
+    }
 }
 
 html.no-js > body {
