--- a/src/assets/styles/component/common.scss
+++ b/src/assets/styles/component/common.scss
@@ -16,7 +16,7 @@
     font-weight: 400;
     src: local('PT Serif'),
          local('PTSerif-Regular'),
-         url(http://themes.googleusercontent.com/static/fonts/ptserif/v4/sDRi4fY9bOiJUbgq53yZCfesZW2xOQ-xsNqO47m55DA.woff) format('woff');
+         url(//themes.googleusercontent.com/static/fonts/ptserif/v4/sDRi4fY9bOiJUbgq53yZCfesZW2xOQ-xsNqO47m55DA.woff) format('woff');
 }
 
 @font-face {
@@ -25,7 +25,7 @@
     font-weight: 700;
     src: local('PT Serif Bold'),
          local('PTSerif-Bold'),
-         url(http://themes.googleusercontent.com/static/fonts/ptserif/v4/QABk9IxT-LFTJ_dQzv7xpIbN6UDyHWBl620a-IRfuBk.woff) format('woff');
+         url(//themes.googleusercontent.com/static/fonts/ptserif/v4/QABk9IxT-LFTJ_dQzv7xpIbN6UDyHWBl620a-IRfuBk.woff) format('woff');
 }
 
 @font-face {
@@ -34,7 +34,7 @@
     font-weight: 400;
     src: local('PT Serif Italic'),
          local('PTSerif-Italic'),
-         url(http://themes.googleusercontent.com/static/fonts/ptserif/v4/03aPdn7fFF3H6ngCgAlQzBsxEYwM7FgeyaSgU71cLG0.woff) format('woff');
+         url(//themes.googleusercontent.com/static/fonts/ptserif/v4/03aPdn7fFF3H6ngCgAlQzBsxEYwM7FgeyaSgU71cLG0.woff) format('woff');
 }
 
 @font-face {
@@ -43,7 +43,7 @@
     font-weight: 700;
     src: local('PT Serif Bold Italic'),
          local('PTSerif-BoldItalic'),
-         url(http://themes.googleusercontent.com/static/fonts/ptserif/v4/Foydq9xJp--nfYIx2TBz9QFhaRv2pGgT5Kf0An0s4MM.woff) format('woff');
+         url(//themes.googleusercontent.com/static/fonts/ptserif/v4/Foydq9xJp--nfYIx2TBz9QFhaRv2pGgT5Kf0An0s4MM.woff) format('woff');
 }
 
 // Noto Sans TC (Chinese_traditional)
