--- a/src/assets/styles/module/main.scss
+++ b/src/assets/styles/module/main.scss
@@ -53,6 +53,53 @@ $function_bar-height: 40px;
     }
 }
 
+@mixin mhwc-sharpness() {
+    .mhwc-steps {
+        position: relative;
+        border: 1px solid black;
+        width: 100%;
+        height: 21px;
+        background-color: black;
+
+        .mhwc-step {
+            display: inline-block;
+            height: 19px;
+
+            &:nth-child(1) {
+                background-color: red;
+            }
+
+            &:nth-child(2) {
+                background-color: orange;
+            }
+
+            &:nth-child(3) {
+                background-color: yellow;
+            }
+
+            &:nth-child(4) {
+                background-color: green;
+            }
+
+            &:nth-child(5) {
+                background-color: blue;
+            }
+
+            &:nth-child(6) {
+                background-color: white;
+            }
+        }
+
+        .mhwc-mask {
+            position: absolute;
+            top: 0;
+            right: 0;
+            height: 19px;
+            background-color: black;
+        }
+    }
+}
+
 .mhwc-selector {
     position: fixed;
     top: 20px + $header-height;
@@ -63,6 +110,40 @@ $function_bar-height: 40px;
     background-color: white;
 
     @include border-radius(5px);
+    @include font-size(1.4);
+
+    @include mhwc-sharpness();
+
+    .mhwc-function_bar {
+        padding: 0 10px;
+        height: $function_bar-height;
+    }
+
+    .mhwc-list {
+        position: absolute;
+
+        top: 5px + $function_bar-height;
+        left: 5px;
+        right: 5px;
+        bottom: 5px;
+        overflow-y: scroll;
+
+        table {
+            width: 100%;
+        }
+
+        &::-webkit-scrollbar {
+            width: 5px;
+            height: 5px;
+            background: white;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background: rgba(0, 0, 0, 0.1);
+            -webkit-border-radius: 10px;
+            border-radius: 10px;
+        }
+    }
 }
 
 .mhwc-container {
@@ -300,50 +381,7 @@ $function_bar-height: 40px;
         }
 
         .mhwc-sharpness {
-            .mhwc-steps {
-                position: relative;
-                border: 1px solid black;
-                width: 100%;
-                height: 21px;
-                background-color: black;
-
-                .mhwc-step {
-                    display: inline-block;
-                    height: 19px;
-
-                    &:nth-child(1) {
-                        background-color: red;
-                    }
-
-                    &:nth-child(2) {
-                        background-color: orange;
-                    }
-
-                    &:nth-child(3) {
-                        background-color: yellow;
-                    }
-
-                    &:nth-child(4) {
-                        background-color: green;
-                    }
-
-                    &:nth-child(5) {
-                        background-color: blue;
-                    }
-
-                    &:nth-child(6) {
-                        background-color: white;
-                    }
-                }
-
-                .mhwc-mask {
-                    position: absolute;
-                    top: 0;
-                    right: 0;
-                    height: 19px;
-                    background-color: black;
-                }
-            }
+            @include mhwc-sharpness();
         }
 
         .mhwc-resistance,
