1. update ui style

--- a/src/assets/styles/module/main.scss
+++ b/src/assets/styles/module/main.scss
@@ -567,10 +567,10 @@ $function_bar-height: 40px;
 
                 @include nowrap();
 
-                .mhwc-exchnage {
-                    float: right;
-                    line-height: 33px;
-                }
+                // .mhwc-exchnage {
+                //     float: right;
+                //     line-height: 33px;
+                // }
             }
 
             .mhwc-value {
@@ -601,10 +601,10 @@ $function_bar-height: 40px;
             }
 
             .mhwc-value {
-                .mhwc-exchnage {
-                    float: right;
-                    line-height: 21px;
-                }
+                // .mhwc-exchnage {
+                //     float: right;
+                //     line-height: 21px;
+                // }
             }
         }
 
@@ -620,10 +620,10 @@ $function_bar-height: 40px;
             }
 
             .mhwc-value {
-                .mhwc-exchnage {
-                    float: right;
-                    line-height: 21px;
-                }
+                // .mhwc-exchnage {
+                //     float: right;
+                //     line-height: 21px;
+                // }
             }
         }
     }
